--- a/EMART-API/Emart/Emart.GateWay/Emart.GateWay.csproj
+++ b/EMART-API/Emart/Emart.GateWay/Emart.GateWay.csproj
@@ -10,7 +10,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
+    <PackageReference Include="Ocelot" Version="14.0.11" />
   </ItemGroup>
 
 
